# dllm

./: .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  Cargo.toml  DLLM_ARCHITECTURE_REFERENCE.md  Makefile  PROJECT_PLAN.md  README.md  benchmark.py  deploy-wait.sh  docker-compose.yml  python3-dev_3.12.3-0ubuntu2.1_arm64.deb
admin/dllm-admin/: index.html  package.json  vite.config.ts
admin/dllm-admin/src/: App.tsx
articles/: README.md  nvidia-forum-intro.md  reddit-intro.md
crates/dllm-core/: Cargo.toml
crates/dllm-core/src/: api.rs  api_keys.rs  commands.rs  config.rs  engine_pool.rs  error.rs  main.rs  memory.rs  model_discovery.rs
crates/dllm-core/src/middleware/: auth.rs  mod.rs
crates/dllm-core/src/routes/: admin.rs  agent.rs  chat.rs  docs.rs  embeddings.rs  health.rs  mod.rs  models.rs  rag.rs  ws.rs
crates/dllm-mac/: Cargo.toml
crates/dllm-mac/src/: engine.rs  factory.rs  health.rs  lib.rs  memory.rs  mlx_process.rs
crates/dllm-nvidia/: Cargo.toml
crates/dllm-nvidia/src/: engine.rs  factory.rs  health.rs  lib.rs  memory.rs  vllm_client.rs  vllm_process.rs
crates/dllm-shared/: Cargo.toml
crates/dllm-shared/src/: engine.rs  error.rs  lib.rs  license.rs  memory.rs  model.rs  types.rs
deploy/docker/: Dockerfile.admin  Dockerfile.agent  Dockerfile.connector  Dockerfile.core  Dockerfile.rag
deploy/oem/: detect-hardware.sh  first-boot.sh  install.sh  update.sh
deploy/systemd/: dllm-agent.service  dllm-core.service  dllm-rag.service
docs/: OMX_VS_DLLM.md  README.md  api.md  architecture.md  benchmark-report.md  cli.md  config.md  contract-checklist.md  deployment.md  gb10-hardware-guide.md
docs/api/: README.md
docs/deployment/: GB10_128GB.md  README.md
services/dllm-agent/: requirements.txt
services/dllm-agent/src/: main.py
services/dllm-connector/: Cargo.toml
services/dllm-connector/src/: cloud.rs  config.rs  main.rs  router.rs
services/dllm-rag/: requirements.txt  start.sh
services/dllm-rag/src/: main.py
