[workspace]
members = [
    "crates/dllm-shared",
    "crates/dllm-core",
    "crates/dllm-nvidia",
    "crates/dllm-mac",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha"
authors = ["dllm Team <team@dllm.ai>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dllm-project/dllm"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP / Web
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
once_cell = "1.20"
dashmap = "6.1"
parking_lot = "0.12"

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Filesystem
walkdir = "2.5"
dirs = "6.0"

# Random
rand = "0.8"

# Testing
mockall = "0.13"
tempfile = "3.14"

# Internal crates
dllm-shared = { path = "crates/dllm-shared" }
dllm-nvidia = { path = "crates/dllm-nvidia" }
dllm-mac = { path = "crates/dllm-mac" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
