[package]
name = "dllm-nvidia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "dllm NVIDIA 後端適配 — vLLM 進程管理與 CUDA 監控"

[dependencies]
# Internal
dllm-shared = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Errors
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }

# NVIDIA NVML (optional)
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = ["nvml"]
nvml = ["dep:nvml-wrapper"]

[dev-dependencies]
mockall = { workspace = true }
